# auth-fastapi

./: .env  docker-compose.yml  pyproject.toml
app/: auth_user.py  depends.py  main.py  routes.py  schemas.py
app/db/: connection.py  models.py
migrations/: env.py
migrations/versions/: 152fd2316fb2_add_users_table.py  ed7d0d670cbd_add_users_table.py
